--- a/app/src/main/res/layout/fragment_ektp_receive_mtcn_share_image.xml
+++ b/app/src/main/res/layout/fragment_ektp_receive_mtcn_share_image.xml
@@ -11,6 +11,7 @@
             android:id="@+id/detailsCardViewToShare"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:scrollbarThumbVertical="@null"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -124,7 +125,7 @@
                     android:id="@+id/acLabelDetailCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginTop="@dimen/_30sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:gravity="start"
@@ -138,7 +139,7 @@
                     android:id="@+id/ouDetailCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:gravity="start"
                     android:text="Diego Vázquez Pérez"
@@ -150,7 +151,7 @@
                     android:id="@+id/reLabelDetailCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:gravity="start"
@@ -164,7 +165,7 @@
                     android:id="@+id/naDetailCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:gravity="start"
                     android:text="Western Union - N12345678RS"
@@ -176,7 +177,7 @@
                     android:id="@+id/coLabelDetailCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:gravity="start"
@@ -190,7 +191,7 @@
                     android:id="@+id/coDetailCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:gravity="start"
                     android:text="Envío de dinero"
@@ -202,7 +203,7 @@
                     android:id="@+id/foLabelDetailCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:gravity="start"
@@ -216,7 +217,7 @@
                     android:id="@+id/foDetailCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:gravity="start"
                     android:text="19283764"
@@ -228,7 +229,7 @@
                     android:id="@+id/stLabelDetailCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:gravity="start"
@@ -242,7 +243,7 @@
                     android:id="@+id/stDetailCardView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginEnd="@dimen/_25sdp"
                     android:gravity="start"
                     android:text="****2456"
