--- a/app/src/main/res/layout/fragment_ektp_recive_money_mtcn.xml
+++ b/app/src/main/res/layout/fragment_ektp_recive_money_mtcn.xml
@@ -140,9 +140,9 @@
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
                     android:layout_marginBottom="-10dp"
-                    android:layout_marginEnd="-10dp"
-                    android:background="@drawable/vector_tip_tooltip"
-                    android:visibility="invisible"
+                    android:layout_marginEnd="-3dp"
+                    android:background="@drawable/ic_tip"
+                    android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="@id/mtcnHintPopUpButton"
                     app:layout_constraintBottom_toTopOf="@id/mtcnHintPopUpButton"
                     />
@@ -151,18 +151,18 @@
                     android:id="@+id/toolTipTextView"
                     android:layout_width="@dimen/_180sdp"
                     android:layout_height="wrap_content"
-                    android:text="@string/receivi_details_tooltip"
-                    android:textSize="@dimen/_10sdp"
-                    android:textColor="@color/elektra_white_gray"
-                    android:fontFamily="@font/azo_sans_regular"
-                    android:visibility="invisible"
-                    android:padding="@dimen/_6sdp"
-                    android:layout_marginBottom="-15dp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:textAlignment="center"
+                    android:layout_marginBottom="-18dp"
                     android:background="@drawable/tooltip_body"
-                    app:layout_constraintEnd_toEndOf="@id/toolTipImageView"
-                    app:layout_constraintBottom_toTopOf="@id/toolTipImageView"/>
+                    android:fontFamily="@font/azo_sans_regular"
+                    android:padding="@dimen/_6sdp"
+                    android:text="@string/receivi_details_tooltip"
+                    android:textAlignment="center"
+                    android:textColor="@color/elektra_white_gray"
+                    android:textSize="@dimen/_10sdp"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toTopOf="@id/toolTipImageView"
+                    app:layout_constraintEnd_toEndOf="@id/toolTipImageView" />
 
                 <TextView
                     android:id="@+id/instructionHeadTextView"
