--- a/app/src/main/res/layout/fragment_ektp_receive_mtcn_details.xml
+++ b/app/src/main/res/layout/fragment_ektp_receive_mtcn_details.xml
@@ -93,7 +93,7 @@
                     android:layout_gravity="center"
                     android:orientation="vertical"
                     card_view:cardCornerRadius="@dimen/_5sdp"
-                    card_view:cardBackgroundColor="@color/elektra_light_gray"
+                    card_view:cardBackgroundColor="@color/elektra_white_gray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detailsHeadLineTextView"
                     app:layout_constraintStart_toStartOf="parent">
@@ -220,7 +220,7 @@
                     android:layout_gravity="center"
                     android:orientation="vertical"
                     card_view:cardCornerRadius="@dimen/_5sdp"
-                    card_view:cardBackgroundColor="@color/elektra_light_gray"
+                    card_view:cardBackgroundColor="@color/elektra_white_gray"
                     android:layout_marginBottom="@dimen/_20sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/bankAccountHeadLineTextView"
@@ -265,7 +265,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_54sdp"
                     android:text="@string/recieve_details_deposit_button"
-                    android:theme="@style/bottom_button"
+                    android:theme="@style/text_button_1"
                     android:background="@drawable/enable_disable_red"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginStart="@dimen/_43sdp"
@@ -279,7 +279,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_64sdp"
                     android:text="@string/recieve_details_later_button"
-                    android:theme="@style/bottom_button"
+                    android:theme="@style/text_button_1"
                     android:textColor="@color/elektra_gray"
                     android:backgroundTint="@color/elektra_yellow"
                     android:layout_marginStart="@dimen/_43sdp"
