--- a/app/src/main/res/layout/fragment_ektp_home_notice.xml
+++ b/app/src/main/res/layout/fragment_ektp_home_notice.xml
@@ -25,6 +25,7 @@
                     android:id="@+id/appLogoImageView"
                     android:layout_width="@dimen/_127sdp"
                     android:layout_height="@dimen/_49sdp"
+                    android:layout_marginEnd="@dimen/_20sdp"
                     android:background="@drawable/ic_home_appbar_elektra_logo"
                     android:layout_marginTop="@dimen/_35sdp"
                     app:layout_constraintEnd_toEndOf="parent"
