--- a/app/src/main/res/layout/fragment_ektp_receive_mtcn_details.xml
+++ b/app/src/main/res/layout/fragment_ektp_receive_mtcn_details.xml
@@ -102,21 +102,61 @@
                         android:layout_height="match_parent">
 
                         <TextView
-                            android:id="@+id/totalDetailsTextView"
+                            android:id="@+id/mtcnReadyLabelTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="+$500.00"
-                            android:theme="@style/header_1"
-                            android:layout_marginTop="@dimen/_24sdp"
+                            android:text="@string/mtcn_ready_label"
+                            android:theme="@style/subtitle_4"
+                            android:layout_marginTop="@dimen/_22sdp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintStart_toStartOf="parent"/>
 
+                        <TextView
+                            android:id="@+id/totalPlusMinusDetailsTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="+"
+                            android:theme="@style/header_1"
+                            android:layout_marginTop="@dimen/_24sdp"
+                            app:layout_constraintTop_toBottomOf="@+id/mtcnReadyLabelTextView"
+                            app:layout_constraintEnd_toStartOf="@id/totalMoneySignDetailsTextView"/>
+
+                        <TextView
+                            android:id="@+id/totalMoneySignDetailsTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="$"
+                            android:theme="@style/title_1"
+                            android:layout_marginTop="@dimen/_24sdp"
+                            app:layout_constraintTop_toBottomOf="@+id/mtcnReadyLabelTextView"
+                            app:layout_constraintEnd_toStartOf="@id/totalDetailsTextView"/>
+
+                        <TextView
+                            android:id="@+id/totalDetailsTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="500."
+                            android:theme="@style/header_1"
+                            android:layout_marginTop="@dimen/_24sdp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/mtcnReadyLabelTextView"
+                            app:layout_constraintStart_toStartOf="parent"/>
+
+                        <TextView
+                            android:id="@+id/totalCentsDetailsTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="00"
+                            android:theme="@style/title_1"
+                            android:layout_marginTop="@dimen/_24sdp"
+                            app:layout_constraintTop_toBottomOf="@+id/mtcnReadyLabelTextView"
+                            app:layout_constraintStart_toEndOf="@id/totalDetailsTextView"/>
+
                         <View
                             android:id="@+id/separator1"
                             android:layout_width="0dp"
-                            android:layout_height="1dp"
+                            android:layout_height="2dp"
                             android:background="@color/white"
                             android:layout_marginTop="@dimen/_15sdp"
                             app:layout_constraintTop_toBottomOf="@+id/totalDetailsTextView"
@@ -130,7 +170,7 @@
                             android:text="@string/recieve_details_sender"
                             android:theme="@style/appbar_title"
                             android:textColor="@color/elektra_gray"
-                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginTop="@dimen/_38sdp"
                             android:layout_marginStart="@dimen/_30sdp"
                             app:layout_constraintTop_toBottomOf="@+id/separator1"
                             app:layout_constraintStart_toStartOf="parent" />
@@ -153,7 +193,7 @@
                             android:text="@string/recieve_details_mtcn_label"
                             android:theme="@style/appbar_title"
                             android:textColor="@color/elektra_gray"
-                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginTop="@dimen/_20sdp"
                             android:layout_marginStart="@dimen/_30sdp"
                             app:layout_constraintTop_toBottomOf="@+id/senderNameTextView"
                             app:layout_constraintStart_toStartOf="parent" />
@@ -176,7 +216,7 @@
                             android:text="@string/recieve_details_status_label"
                             android:theme="@style/appbar_title"
                             android:textColor="@color/elektra_gray"
-                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginTop="@dimen/_20sdp"
                             android:layout_marginStart="@dimen/_30sdp"
                             app:layout_constraintTop_toBottomOf="@+id/partnerMTCNTextView"
                             app:layout_constraintStart_toStartOf="parent" />
@@ -199,20 +239,33 @@
                 </androidx.cardview.widget.CardView>
 
                 <TextView
+                    android:id="@+id/depositBankHintTextView"
+                    android:text="@string/deposit_bank_hint_text_view"
+                    android:theme="@style/body_1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginEnd="@dimen/_43sdp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/detailsCardView"/>
+
+                <TextView
                     android:id="@+id/bankAccountHeadLineTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:theme="@style/subtitle_2"
-                    android:text="@string/recieve_details_label"
+                    android:text="@string/recieve_details_account_label"
                     android:layout_marginTop="@dimen/_20sdp"
-                    app:layout_constraintTop_toBottomOf="@id/detailsCardView"
+                    app:layout_constraintTop_toBottomOf="@id/depositBankHintTextView"
                     app:layout_constraintStart_toStartOf="@id/detailsCardView"/>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/bankAccountCardView"
                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/_85sdp"
+                    android:layout_height="@dimen/_55sdp"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginStart="@dimen/_41sdp"
                     android:layout_marginEnd="@dimen/_41sdp"
@@ -234,7 +287,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/recieve_details_guardadito"
-                            android:theme="@style/title_2"
+                            android:theme="@style/subtitle_3"
                             android:layout_marginTop="@dimen/_19sdp"
                             android:layout_marginStart="@dimen/_19sdp"
                             app:layout_constraintTop_toTopOf="parent"
@@ -247,13 +300,10 @@
                             android:text="****1234"
                             android:theme="@style/appbar_title"
                             android:textColor="@color/elektra_gray"
-                            android:layout_marginTop="@dimen/_6sdp"
-                            android:layout_marginStart="@dimen/_21sdp"
-                            android:layout_marginBottom="@dimen/_21sdp"
-                            android:layout_marginEnd="@dimen/_6sdp"
-                            app:layout_constraintTop_toBottomOf="@+id/bankAccountNameTextView"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"/>
+                            android:layout_marginTop="@dimen/_19sdp"
+                            android:layout_marginEnd="@dimen/_19sdp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -266,7 +316,7 @@
                     android:text="@string/recieve_details_deposit_button"
                     android:theme="@style/text_button_1"
                     android:background="@drawable/enable_disable_red"
-                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginTop="@dimen/_22sdp"
                     android:layout_marginStart="@dimen/_43sdp"
                     android:layout_marginEnd="@dimen/_43sdp"
                     app:layout_constraintTop_toBottomOf="@+id/bankAccountCardView"
