--- a/app/src/main/res/layout/fragment_ektp_details_to_share.xml
+++ b/app/src/main/res/layout/fragment_ektp_details_to_share.xml
@@ -41,7 +41,7 @@
                     android:layout_width="@dimen/_150sdp"
                     android:layout_height="@dimen/_61sdp"
                     android:layout_marginTop="@dimen/_36sdp"
-                    android:background="@drawable/ic_appbar_logo"
+                    android:background="@drawable/ektp_logo_details"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@id/detailsHeader" />
