--- a/app/src/main/res/layout/fragment_ektp_recive_money_mtcn.xml
+++ b/app/src/main/res/layout/fragment_ektp_recive_money_mtcn.xml
@@ -75,10 +75,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/recieve_insert_mtcn"
-                    android:theme="@style/subtitle_3"
-                    android:layout_marginTop="@dimen/_64sdp"
-                    android:layout_marginStart="@dimen/_43sdp"
+                    android:theme="@style/title_2"
+                    android:layout_marginTop="@dimen/_60sdp"
+                    android:layout_marginEnd="@dimen/_50sdp"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"/>
 
                 <TextView
@@ -90,6 +91,7 @@
                     android:text="@string/recieve_insert_key"
                     android:theme="@style/body_1"
                     android:layout_marginBottom="@dimen/_6sdp"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/receiveInsertMTCNTextView"/>
 
@@ -97,7 +99,7 @@
                     android:id="@+id/mtcnEntryEditText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_40sdp"
                     android:hint="@string/recieve_insert_key_hint"
                     android:layout_marginStart="@dimen/_43sdp"
                     android:layout_marginEnd="@dimen/_43sdp"
@@ -108,7 +110,7 @@
                     android:padding="@dimen/_13sdp"
                     android:theme="@style/hint_edit_text"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/mtcnEntryTextView"
+                    app:layout_constraintTop_toBottomOf="@+id/receiveInsertMTCNTextView"
                     app:layout_constraintStart_toStartOf="parent" />
                 <TextView
                     android:id="@+id/mtcnOk"
@@ -126,13 +128,15 @@
 
                 <ImageButton
                     android:id="@+id/mtcnHintPopUpButton"
-                    android:layout_width="@dimen/_22sdp"
-                    android:layout_height="@dimen/_22sdp"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
                     android:background="@drawable/ic_help_button"
                     android:layout_marginBottom="@dimen/_6sdp"
+                    android:layout_marginStart="@dimen/_15sdp"
                     android:padding="@dimen/_10sdp"
-                    app:layout_constraintBottom_toTopOf="@+id/mtcnEntryEditText"
-                    app:layout_constraintEnd_toEndOf="@+id/mtcnEntryEditText"/>
+                    app:layout_constraintTop_toTopOf="@+id/receiveInsertMTCNTextView"
+                    app:layout_constraintStart_toEndOf="@+id/receiveInsertMTCNTextView"
+                    app:layout_constraintBottom_toBottomOf="@+id/receiveInsertMTCNTextView"/>
 
                 <ImageView
                     android:id="@+id/toolTipImageView"
@@ -194,7 +198,7 @@
                     android:layout_marginStart="@dimen/_43sdp"
                     android:layout_marginEnd="@dimen/_43sdp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_100sdp"
+                    android:layout_marginTop="@dimen/_250sdp"
                     android:layout_marginBottom="@dimen/_45sdp"
                     android:background="@drawable/enable_disable_red"
                     android:text="@string/recieve_check_button"
